# course_work_Django

./: .env.sample  .gitignore  README.md  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_list.html
client/: admin.py  forms.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_client_owner.py  0003_alter_client_email.py  0004_remove_client_owner_client_user.py
client/templates/client/: client_confirm_delete.html  client_detail.html  client_list.html
config/: settings.py  urls.py
fixtures/: group.json
mailing/: admin.py  apps.py  forms.py  models.py  scheduler.py  services.py  urls.py  views.py
mailing/management/commands/: start_mail.py
mailing/migrations/: 0001_initial.py  0002_mailingsettings_owner.py  0003_remove_mailingsettings_owner_mailingsettings_user.py  0004_alter_mailingsettings_options.py  0005_alter_mailingsettings_options.py  0006_alter_mailingsettings_options.py
mailing/templates/mailing/: base.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html
mailing/templates/mailing/includes/: inc_main_menu.html
users/: forms.py  models.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: confirm_email.html  confirm_email_done.html  invalid_veryfi.html  login.html  register.html  user_form.html  verify_email.html
