[tool.poetry]
name = "pythondjango-cource"
version = "1.1.12"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pythondjango_cource"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
pillow = "^10.0.1"
psycopg2-binary = "^2.9.8"
pytz = "^2023.3.post1"
django-crontab = "^0.7.1"
waitress = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
